FP-32 fixed pom.xml